[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://info_panel.gd" type="Script" id=2]
[ext_resource path="res://GUI/info_panel/info_panel_base.png" type="Texture" id=3]
[ext_resource path="res://GUI/close_icon.png" type="Texture" id=4]
[ext_resource path="res://GUI/close_icon_clicked.png" type="Texture" id=5]
[ext_resource path="res://popup/Illustration2.png" type="Texture" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]

[node name="info_panel" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="evolution_spot" type="Node2D" parent="."]

[node name="info_panel_background" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="info_panel_text" type="Control" parent="."]
margin_left = -228.0
margin_top = -162.0
margin_right = -178.0
margin_bottom = -112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="info_panel_text"]
pause_mode = 2
margin_right = 461.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.368627, 0.482353, 0.611765, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pregnant" type="Label" parent="info_panel_text"]
margin_top = 48.0
margin_right = 384.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.368627, 0.482353, 0.611765, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="age" type="Label" parent="info_panel_text"]
margin_top = 235.0
margin_right = 462.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.423529, 0.517647, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_text" type="Label" parent="info_panel_text"]
margin_left = -8.0
margin_top = 76.0
margin_right = 102.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.372549, 0.478431, 0.607843, 1 )
text = "health :"
align = 2

[node name="energy_text" type="Label" parent="info_panel_text"]
margin_left = -8.0
margin_top = 184.0
margin_right = 103.0
margin_bottom = 205.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.372549, 0.478431, 0.607843, 1 )
text = "happiness :"
align = 2

[node name="happiness_text" type="Label" parent="info_panel_text"]
margin_left = -8.0
margin_top = 128.0
margin_right = 101.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.372549, 0.478431, 0.607843, 1 )
text = "energy :"
align = 2

[node name="close_button" type="TextureButton" parent="."]
margin_left = 185.0
margin_top = 72.0
margin_right = 235.0
margin_bottom = 122.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gender" type="Sprite" parent="."]
position = Vector2( 206, -197 )

[node name="pregnant" type="Sprite" parent="."]
position = Vector2( 196, 140 )

[node name="happiness_bar_back" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = 10.0
margin_right = -74.0
margin_bottom = 50.0
color = Color( 0.74902, 0.45098, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="love_happiness_bar" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = 10.0
margin_right = -74.0
margin_bottom = 50.0
color = Color( 0.760784, 0.560784, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="happiness_bar" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = 10.0
margin_right = -74.0
margin_bottom = 50.0
color = Color( 0.984314, 0.564706, 0.996078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar_back" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = -94.0
margin_right = -74.0
margin_bottom = -54.0
color = Color( 0.74902, 0.45098, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = -94.0
margin_right = -74.0
margin_bottom = -54.0
color = Color( 0.392157, 0.898039, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy_bar_back" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = -42.0
margin_right = -74.0
margin_bottom = -2.0
color = Color( 0.74902, 0.45098, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy_bar" type="ColorRect" parent="."]
margin_left = -114.0
margin_top = -42.0
margin_right = -74.0
margin_bottom = -2.0
color = Color( 1, 0.45098, 0.396078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evolution_button" type="TextureButton" parent="."]
margin_left = 46.4473
margin_top = 75.7221
margin_right = 174.447
margin_bottom = 203.722
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="evolution_button" to="." method="_on_evolution_button_pressed"]
